--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,11 +1,7 @@
 # Remap prefix
-#unbind C-b
 #set -g prefix C-Space
-#bind C-Space send-prefix
-
-# Enable cycling through windows using Shift + Alt + (H | L)
-bind -n M-H previous-window
-bind -n M-L next-window
+#unbind-key C-b
+#bind-key C-Space send-prefix
 
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
@@ -13,17 +9,34 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # Enable mouse support
 set -g mouse on
 
-# Reindex
+# Reindex panes
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 
-# Enable renumeration on window close
+# Reindex windows
 set-option -g renumber-windows on
+
+# Enable cycling through windows using Shift + Alt + (H | L)
+bind -n M-H previous-window
+bind -n M-L next-window
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Enable focus events for plugin https://github.com/roxma/vim-tmux-clipboard
+set -g focus-events on
+
+# Enable nvim session & pane content restoration https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_vim_and_neovim_sessions.md
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'projekt0n/github-nvim-theme'
 
