--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,6 +33,9 @@ set -g focus-events on
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
+# Enable stronger active pane indicators
+set -g pane-border-indicators both 
+
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
