feat: add stonger pane border indicators option

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,6 +32,9 @@ bind % split-window -h -c "#{pane_current_path}"
 # Enable focus events for plugin https://github.com/roxma/vim-tmux-clipboard
 set -g focus-events on
 
+# Enable stronger active pane indicators
+set -g pane-border-indicators both
+
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
