--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -a terminal-features "tmux-256color:RGB"
 
 # Enable mouse support
 set -g mouse on
@@ -14,6 +15,11 @@ set-option -g renumber-windows on
 
 # Move status line to the top
 set-option -g status-position top
+set -g status-style "bg=default"
+set -g status-interval 5
+set -g status-left "#S"
+set -g status-right ""
+set -g status-justify absolute-centre
 
 # Enable cycling through windows using Shift + Alt + (H | L)
 bind -n M-H previous-window
@@ -30,11 +36,28 @@ set -g focus-events on
 # Enable stronger active pane indicators
 set -g pane-border-indicators both 
 
-# Pane navigation when nvim is inactive
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# Status toggler
+bind b set -g status
+# Show env
+bind E show-environment -g
+# Reload conf
+bind r source-file "~/.config/tmux/tmux.conf"
+
+# Pane nav, avoid C-hjkl as nvim uses them
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Script launchers
+bind t run "tmux neww ~/.config/scripts/time.sh"
+bind f run "tmux neww ~/.config/scripts/tmux-session-dispensary.sh"
+
+# bind N run "~/.config/scripts/tmux-session-dispensary.sh ~/documents/notes"
+
+# bind o neww -S -n "BOOKMARKS" "nvim ~/bookmarks.csv"
+# bind e neww -S "nvim ~/bookmarks.csv"
+
 
 # Initialize plugins
 set -g @plugin 'tmux-plugins/tpm' # The plugin manager itself
