--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# Disable waiting time for nvim mode switching
+set -sg escape-time 0
+
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -a terminal-features "tmux-256color:RGB"
